<resources>
    <string name="app_name">ProyectoF</string>
    <!-- strings.xml -->
    <string name="titulo">PROYECTO F</string>

    <string name="nombre_usuario">Corre Electronico:</string>
    <string name="password_usuario">Contraseña:</string>
    <string name="incio_usuario">Inicio</string>
    <string name="Registrar_user">Registrarse</string>


    <string name="titulo_Registrarse">REGISTRARSE</string>
    <string name="registrarse_nombre_real">Nombre:</string>
    <string name="registrarse_apellido">Apellido:</string>
    <string name="registrarse_nombre_usuario">Nombre Usuario:</string>
    <string name="registrarse_pass">Contraseña:</string>
    <string name="registrarse_pass_repetir">Repetir Contraseña:</string>
    <string name="registrarse_email">Correo Electronico:</string>
    <string name="registrarse_Ciudad">Ciudad:</string>
    <string name="registrarse_codigopostal">Codigo Postal:</string>
    <string name="registrarse_telefono">Telefono:</string>
    <string name="registrarse_botton">REGISTRARSE</string>

    <string name ="titulo_eventos">EVENTOS</string>

    <string name="titulo_ticket">TICKETS</string>

    <string name="titulo_amigos">AMIGOS</string>
    <string name="boton_añadir_amigos">AÑADIR</string>

    <string name="titulo_fav">FAVORITOS</string>

   <string name="text_precio">Precio Entrada:</string>
    <string name="text_horario">Horario:</string>
    <string name="text_fecha">Fecha:</string>
    <string name="text_cantidad_ticketa">Tickets Disponibles:</string>
    <string name="text_localidad">Localidad:</string>
    <string name="boton_comprar">COMPRAR</string>


    <string name="boton_añadir">+</string>
    <string name="boton_restar">-</string>

    <string name="boton_configurar_cuenta">Configurar Cuenta</string>
    <string name="boton_compartir">Amigos</string>
    <string name="boton_saldo">Codigos</string>
    <string name="boton_cerrar_sesion">Cerrar Sesion</string>
    <string name="txt_perfil">Perfil</string>
    <string name="txt_nombre_user">User</string>

    <string name="text_saldo_disponible">Descuento Disponible</string>
    <string name="text_euros">0%</string>
    <string name ="boton_canjear_codigo">Canjear Codigo</string>

    <string name="titulo_configurar_cuenta">CONFIGURAR</string>
    <string name="boton_config">GUARDAR</string>

    <string name="configurar_passAntiguo">Contraseña Nueva:</string>
    <string name="configurar_passNuevo">Repetir Contraseña:</string>
</resources>
