<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_info_evento"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/frame_splash_creen">

    <ImageView
        android:id="@+id/imagen_evento"
        android:layout_width="match_parent"
        android:layout_height="208dp"

        app:srcCompat="@android:color/background_dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="521dp"
        android:layout_below="@+id/imagen_evento"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginRight="-3dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_titulo_evento"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Titulo Evento: "
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_precio_entrada"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:text="@string/text_precio"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_horario"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:text="@string/text_horario"
                android:textSize="24dp" />

            <ListView
                android:id="@+id/lista_horario"
                android:layout_width="349dp"
                android:layout_height="233dp" />

            <Button
                android:id="@+id/boton_comprar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_input"
                android:text="@string/boton_comprar" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>