<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_info_evento"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/frame_splash_creen">


    <ImageView
        android:id="@+id/imagen_evento_fav"
        android:layout_width="410dp"
        android:layout_height="116dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="522dp"
        app:srcCompat="@android:color/background_light">

    </ImageView>

    <ImageView
        android:id="@+id/image_atras_favo"
        android:layout_width="76dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="310dp"
        android:layout_marginRight="324dp"
        android:layout_marginBottom="676dp"
        app:srcCompat="@drawable/icono_atras" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="629dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_titulo_evento_fav"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Titulo Evento: "
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_descripcion_fav"
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/text_localidad_fav"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:text="@string/text_localidad"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/text_precio_entrada_fav"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:text="@string/text_precio"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_horario_fav"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:text="@string/text_fecha"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/text_Hora_fav"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:text="@string/text_horario"
                android:textSize="24dp" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>