<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_inici"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/frame_splash_creen">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="535dp"
        android:gravity="center_horizontal|top"
        android:text="@string/titulo"
        android:textAppearance="@style/titulo"
        android:textSize="36sp"
        tools:text="PROYECTO F" />
    <!-- Nombre Usuario: -->
    <TextView
        android:id="@+id/nombre_usuario"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:layout_marginBottom="461dp"
        android:gravity="top"
        android:text="@string/nombre_usuario"
        android:textAppearance="@style/nombre_usuario"
        android:textSize="24sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/input_usuario"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="414dp"
        android:autofillHints=""
        android:background="@drawable/frame_input"
        android:ems="10"
        android:inputType="textPersonName" />
    <!-- password Usuario: -->
    <TextView
        android:id="@+id/password_usuario"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="352dp"
        android:gravity="top"
        android:text="@string/password_usuario"
        android:textAppearance="@style/nombre_usuario"
        android:textSize="24sp"
        app:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/input_password"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="278dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="284dp"
        android:background="@drawable/frame_input"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_inicio"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="207dp"
        android:background="@drawable/frame_input"
        android:text="@string/incio_usuario"
        android:textAppearance="@style/nombre_usuario"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/click_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="466dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="138dp"
        android:gravity="center"
        android:text="@string/Registrar_user"
        android:textSize="24sp" />

</RelativeLayout>