<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_configurar_cuenta"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/frame_splash_creen">

    <TextView
        android:id="@+id/titulo_configurar"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="520dp"
        android:text="@string/titulo_configurar_cuenta"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/text_CorreoConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="185dp"
        android:layout_marginRight="185dp"
        android:layout_marginBottom="336dp"
        android:text="@string/registrarse_email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_TelefonoConf"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:layout_marginBottom="206dp"
        android:text="@string/registrarse_telefono"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_RepetirPassConf"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="183dp"
        android:layout_marginRight="183dp"
        android:layout_marginBottom="380dp"
        android:text="@string/registrarse_pass_repetir"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_PassConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="192dp"
        android:layout_marginRight="192dp"
        android:layout_marginBottom="424dp"
        android:text="@string/registrarse_pass"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_CodigoPostalConf"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:layout_marginBottom="249dp"
        android:text="@string/registrarse_codigopostal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_nombreConf"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="196dp"
        android:layout_marginRight="196dp"
        android:layout_marginBottom="472dp"
        android:text="@string/registrarse_nombre_usuario"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_CiudadConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="326dp"
        android:layout_marginEnd="189dp"
        android:layout_marginRight="189dp"
        android:layout_marginBottom="292dp"
        android:text="@string/registrarse_Ciudad"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/frame_input"
        android:text="@string/boton_config" />

    <ImageView
        android:id="@+id/icono_atras"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="309dp"
        android:layout_marginRight="309dp"
        android:layout_marginBottom="589dp"
        app:srcCompat="@drawable/icono_atras" />

    <EditText
        android:id="@+id/input_nombreUserConf"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="470dp"
        android:background="@drawable/frame_input"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/input_CorreConf"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="281dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="335dp"
        android:background="@drawable/frame_input"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/input_CodigoPostalConf"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/frame_input"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/input_TelefonoConf"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="411dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="205dp"
        android:background="@drawable/frame_input"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/input_PassConf"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="177dp"
        android:layout_marginLeft="177dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="421dp"
        android:background="@drawable/frame_input"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/input_RepetirPassConf"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="179dp"
        android:layout_marginLeft="179dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="378dp"
        android:background="@drawable/frame_input"
        android:ems="10"
        android:inputType="textPassword" />
</RelativeLayout>